--- a/README.org
+++ b/README.org
@@ -1,5 +1,6 @@
 * maimodorun
 Maimodorun is a chrome extension to recover unsaved texts on Rich Text Editor(RTE) for kintone.
+[[file:figs/branding_images/branding_logo_for_README_440x180.png]]
 ** Features
 1. Automaticaly store texts on RTE.
 2. Recover stored text into the original RTE.
