--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -6,12 +6,12 @@
   "AriaLabelForListOfHistory": "List of history",
   "AriaLabelForEmptyHistoryImage": "An image indicating that no activity exists",
   "ActivityDoesNotExist": "You have no activity yet!",
-  "WhyDoNotYouPostComment": "Why don't you write something in kintone?",
-  "RecordCardTitleForComment": "You wrote the body text in \"{{location}}\".",
-  "RecordCardTitleForReply": "You wrote a reply with \"{{location}}\".",
-  "RecordCardTitleForReplyInPeople": "You wrote a reply with \"{{location}}\".",
-  "RecordCardTitleForCommentInMessage": "You wrote a message in \"{{location}}\".",
-  "RecordCardTitleForCommentInApp": "You wrote a comment in \"{{location}}\".",
+  "WhyDoNotYouPostComment": "Why don't you write something on kintone?",
+  "RecordCardTitleForComment": "You wrote the body text on \"{{location}}\".",
+  "RecordCardTitleForReply": "You wrote a reply on \"{{location}}\".",
+  "RecordCardTitleForReplyInPeople": "You wrote a reply on \"{{location}}\".",
+  "RecordCardTitleForCommentInMessage": "You wrote a message on \"{{location}}\".",
+  "RecordCardTitleForCommentInApp": "You wrote a comment on \"{{location}}\".",
   "ThreadBodyTag": "Thread / Body",
   "ThreadReplyTag": "Thread / Reply",
   "PeopleBodyTag": "People / Body",
